Added logging, added getters/setters